[package]
name = "gmp-rs"
version = "0.5.1"
edition = "2021"
description = "A pure-Rust, no-unsafe, no_std, no_alloc arbitrary-precision integer (mpz) subset, faithful to GMP's mpz_* operations."
license = "LGPL-3.0-or-later"
repository = "https://github.com/infinityabundance/gmp-rs"
documentation = "https://docs.rs/gmp-rs"
readme = "README.md"
keywords = ["gmp", "arbitrary-precision", "ffi", "bigint", "no-alloc"]
categories = ["algorithms", "data-structures", "mathematics", "no-std", "science"]

[features]
default = []
std = []
const_time = []
nightly = []
gmp_cross_check = []

[dev-dependencies]
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[build-dependencies]
cc = "1"

# Note: #![forbid(unsafe_code)] is in src/lib.rs, not here,
# so that external test binaries can use FFI.

[package.metadata.cargo-fuzz]
target_directory = "fuzz"

[[bench]]
name = "arithmetic"
harness = false

[[bench]]
name = "gmp_comparison"
harness = false
required-features = ["gmp_cross_check"]
