[package]
name = "gmp-rs-fuzz"
version = "0.0.0"
edition = "2021"
description = "Fuzz targets for gmp-rs"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
gmp-rs = { path = ".." }

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "arithmetic_fuzz"
path = "fuzz_targets/arithmetic_fuzz.rs"
test = false
doc = false

[[bin]]
name = "parse_fuzz"
path = "fuzz_targets/parse_fuzz.rs"
test = false
doc = false

[[bin]]
name = "bitwise_fuzz"
path = "fuzz_targets/bitwise_fuzz.rs"
test = false
doc = false
